Refact(Test): refactoring about test runs